all tailwind classes sorted

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,8 @@ import MenuIcon from "./icons/menu-icon.astro";
 <nav
   class="fixed w-full px-12 py-3 text-gray-400 z-50 bg-[#04040C] border-b-2 border-gray-800"
 >
-  <div class="max-w-7xl flex flex-wrap items-center justify-between mx-auto">
-    <a href="/" class="flex items-center text-white text-3xl tracking-tight">
+  <div class="flex flex-wrap items-center justify-between mx-auto max-w-7xl">
+    <a href="/" class="flex items-center text-3xl tracking-tight text-white">
       <img src="/images/favicon.svg" class="h-16 md:h-20" alt="MyGYM Logo" />
       <span class="hidden lg:block">MYGYM</span>
     </a>
@@ -22,7 +22,7 @@ import MenuIcon from "./icons/menu-icon.astro";
     </button>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul
-        class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-10 md:mt-0"
+        class="flex flex-col p-4 mt-4 font-medium md:p-0 md:flex-row md:space-x-10 md:mt-0"
       >
         <li>
           <a
