--- a/src/layouts/InscriptionLayout.astro
+++ b/src/layouts/InscriptionLayout.astro
@@ -21,7 +21,7 @@ import Arrow from "../components/icons/arrow.astro";
 	</head>
 	<body style="font-family: lexend;">
 		<section class="px-12 py-6 bg-[#1e1e2c] w-screen fixed top-0 lg:py-8">
-			<div class="text-white max-w-7xl m-auto flex justify-between">
+			<div class="flex justify-between m-auto text-white max-w-7xl">
 				<a href="/">
 					<Arrow className="h-6 rotate-180" />
 				</a>
