--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/Layout.astro";
   <main>
     <section id="classes" class="px-12 py-40">
       <div class="text-[#04040C] max-w-[70ch] m-auto">
-        <h1 class="text-center font-semibold text-4xl mb-4 md:text-5xl md:mb-8">
+        <h1 class="mb-4 text-4xl font-semibold text-center md:text-5xl md:mb-8">
           WELCOME TO MYGYM
         </h1>
         <p>
@@ -32,7 +32,7 @@ import Layout from "../layouts/Layout.astro";
             src="/images/owners.webp"
             alt="Robert and Claire looking each other, MyGym owners"
           />
-          <p class="text-center italic">
+          <p class="italic text-center">
             Robert and Claire, marriaged and MyGym co-founders
           </p>
         </div>
@@ -48,7 +48,7 @@ import Layout from "../layouts/Layout.astro";
         </p>
         <br />
         <h1
-          class="text-center font-semibold text-2xl mt-8 mb-4 md:text-4xl md:my-8 md:mt-16"
+          class="mt-8 mb-4 text-2xl font-semibold text-center md:text-4xl md:my-8 md:mt-16"
         >
           EXPERT GUIDANCE FROM CERTIFIED TRAINERS
         </h1>
@@ -69,22 +69,22 @@ import Layout from "../layouts/Layout.astro";
         >
           <div>
             <img src="/images/woman-trainer-1.svg" alt="" />
-            <p class="font-semibold text-xl">Mariem Neuer</p>
+            <p class="text-xl font-semibold">Mariem Neuer</p>
             <p>Personal trainer</p>
           </div>
           <div>
             <img src="/images/man-trainer-3.svg" alt="" />
-            <p class="font-semibold text-xl">Chris Dawson</p>
+            <p class="text-xl font-semibold">Chris Dawson</p>
             <p>Personal trainer</p>
           </div>
           <div>
             <img src="/images/man-trainer-1.svg" alt="" />
-            <p class="font-semibold text-xl">Nick Fury</p>
+            <p class="text-xl font-semibold">Nick Fury</p>
             <p>Zumba & Crossfit teacher</p>
           </div>
         </div>
         <h1
-          class="text-center font-semibold text-2xl mt-8 mb-4 md:text-4xl md:mb-8 md:mt-16"
+          class="mt-8 mb-4 text-2xl font-semibold text-center md:text-4xl md:mb-8 md:mt-16"
         >
           A SUPPORTIVE AND INCLUSIVE COMMUNITY
         </h1>
