--- a/src/components/ClassCard.astro
+++ b/src/components/ClassCard.astro
@@ -8,17 +8,17 @@ const { name, img } = Astro.props;
       <img
         src={img}
         alt={"Image of people doing " + name}
-        class="h-full object-cover"
+        class="object-cover h-full"
       />
     </div>
     <div class="absolute">
       <p
-        class="absolute text-sm bg-gradient-to-r from-black to-transparent bottom-4 py-2 px-4 sm:px-12"
+        class="absolute px-4 py-2 text-sm bg-gradient-to-r from-black to-transparent bottom-4 sm:px-12"
       >
         JOIN
       </p>
     </div>
-    <div class="h-1/6 flex text-sm sm:text-lg items-center justify-center">
+    <div class="flex items-center justify-center text-sm h-1/6 sm:text-lg">
       <p>{name}</p>
     </div>
   </div>
