--- a/src/components/CommentCard.astro
+++ b/src/components/CommentCard.astro
@@ -2,18 +2,18 @@
 const { name, img, date, comment } = Astro.props;
 ---
 
-<div class="p-3 w-full">
-  <div class="shadow-md h-full rounded-lg overflow-hidden">
+<div class="w-full p-3">
+  <div class="h-full overflow-hidden rounded-lg shadow-md">
     <div class="flex justify-center py-3 bg-gray-200">
       <img
-        class="w-20 aspect-square object-cover rounded-full"
+        class="object-cover w-20 rounded-full aspect-square"
         src={img}
         alt=`thumbnail image of ${name}`
       />
     </div>
-    <div class="flex flex-col text-center p-6">
+    <div class="flex flex-col p-6 text-center">
       <span class="font-semibold text-[#04040C]">{name}</span>
-      <span class="text-xs text-gray-500 mb-6">{date}</span>
+      <span class="mb-6 text-xs text-gray-500">{date}</span>
       <span class="text-sm text-[#04040C]">{comment}</span>
     </div>
   </div>
