--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import InstagramIcon from "../components/icons/instagram.astro";
 ---
 
 <footer class="bg-[#04040C]">
-  <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+  <div class="w-full max-w-screen-xl p-4 py-6 mx-auto lg:py-8">
     <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
     <div class="flex items-center justify-between">
       <span class="text-sm text-gray-500 sm:text-center"
